--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Simple Calculator</title>
 </head>
 
-<body>
+<body class = "total">
     <h1 style="text-align:center">Simple Calculator App</h1>
     <div class="container">
         <br>
